---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2021-12-09
  Changes:
    - Added antialiasing to the indicators (#2) (credit to snouz)
    - Removed indicator from the Space Exploration cargo rocket silo
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2021-07-09
  Bugfixes:
    - Fixed a crash when an entity doesn't have a selection box (#1)
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2021-06-20
  Features:
    - Added orange as a selectable color
  Changes:
    - Indicators are no longer shown on Transport Drones depots and Mining Drones depots
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021-06-08
  Changes:
    - Re-added the indicator to SE condenser turbines
    - Prototypes with `bottleneck_ignore = true` will have that property removed after BNL reads it, to avoid pollution with debugging tools
    - The mod now depends on `flib`
  Bugfixes:
    - Fixed the mod not accounting for non-square entity rotations, leading to incorrect indicator placements
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-06-07
  Features:
    - Added an internal entity blacklist
  Changes:
    - Removed the indicator from SE condenser turbines
  Bugfixes:
    - Fixed SE core mining drills showing two overlapping indicators
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-06-07
  Features:
    - Added "off" color option, which disables the indicator for that status (thanks justarandomgeek!)