@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed indicators only drawing on entities that were supposed to be ignored (oops)
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: 2021-12-09
